@@ -6,7 +6,7 @@ use MARC::Convert::Wikidata::Transform;
 use MARC::File::XML;
 use MARC::Record;
 use Perl6::Slurp qw(slurp);
-use Test::More 'tests' => 99;
+use Test::More 'tests' => 109;
 use Test::NoWarnings;
 use Test::Warn;
 use Unicode::UTF8 qw(decode_utf8 encode_utf8);
@@ -25,7 +25,10 @@ is($author->name, 'Elias', 'Masa a moc: Get author name.');
 is($author->surname, 'Canetti', 'Masa a moc: Get author surname.');
 is($author->date_of_birth, 1905, 'Masa a moc: Get author date of birth.');
 is($author->date_of_death, 1994, 'Masa a moc: Get author date of death.');
-is($author->nkcr_aut, 'jn19990001316', 'Masa a moc: Get author NKČR AUT id.');
+my $author_ext_ids_ar = $author->external_ids;
+is(@{$author_ext_ids_ar}, 1, 'Masa a moc: Get author external ids count (1).');
+is($author_ext_ids_ar->[0]->name, 'nkcr_aut', 'Masa a moc: Get author external value name (nkcr_aut).');
+is($author_ext_ids_ar->[0]->value, 'jn19990001316', 'Masa a moc: Get author NKCR id (jn19990001316).');
 is($ret->edition_number, 1, 'Masa a moc: Get edition number.');
 is_deeply($ret->editors, [], 'Masa a moc: Get editors.');
 my $external_ids_ar = $ret->external_ids;
@@ -55,7 +58,10 @@ is($translator->name, decode_utf8('Jiří'), 'Masa a moc: Get translator name.')
 is($translator->surname, decode_utf8('Stromšík'), 'Masa a moc: Get translator surname.');
 is($translator->date_of_birth, 1939, 'Masa a moc: Get translator date of birth.');
 is($translator->date_of_death, undef, 'Masa a moc: Get translator date of death.');
-is($translator->nkcr_aut, 'jk01121492', 'Masa a moc: Get translator NKČR AUT id.');
+my $translator_ext_ids_ar = $translator->external_ids;
+is(@{$translator_ext_ids_ar}, 1, 'Masa a moc: Get author external ids count (1).');
+is($translator_ext_ids_ar->[0]->name, 'nkcr_aut', 'Masa a moc: Get translator external value name (nkcr_aut).');
+is($translator_ext_ids_ar->[0]->value, 'jk01121492', 'Masa a moc: Get translator NKCR id (jk01121492).');
 my $kramerius_link = $ret->krameriuses->[0];
 is($kramerius_link->kramerius_id, 'mzk', 'Masa a moc: Get Kramerius system id.');
 is($kramerius_link->object_id, 'dec885c0-51fc-11e5-bf4b-005056827e51', 'Masa a moc: Get Kramerius uuid.');
@@ -84,7 +90,10 @@ is($author->name, 'Karel', 'Krakatit: Get author name.');
 is($author->surname, decode_utf8('Čapek'), 'Krakatit: Get author surname.');
 is($author->date_of_birth, 1890, 'Krakatit: Get author date of birth.');
 is($author->date_of_death, 1938, 'Krakatit: Get author date of death.');
-is($author->nkcr_aut, 'jk01021023', 'Krakatit: Get author NKČR AUT id.');
+$author_ext_ids_ar = $author->external_ids;
+is(@{$author_ext_ids_ar}, 1, 'Krakatit: Get author external ids count (1).');
+is($author_ext_ids_ar->[0]->name, 'nkcr_aut', 'Krakatit: Get author external value name (nkcr_aut).');
+is($author_ext_ids_ar->[0]->value, 'jk01021023', 'Krakatit: Get author NKCR id (jk01021023).');
 is($ret->edition_number, undef, 'Krakatit: Get edition number.');
 is_deeply($ret->editors, [], 'Krakatit: Get editors.');
 $external_ids_ar = $ret->external_ids;
@@ -119,7 +128,10 @@ is($author->name, 'Jan', 'Broučci: Get author name.');
 is($author->surname, decode_utf8('Karafiát'), 'Broučci: Get author surname.');
 is($author->date_of_birth, 1846, 'Broučci: Get author date of birth.');
 is($author->date_of_death, 1929, 'Broučci: Get author date of death.');
-is($author->nkcr_aut, 'jk01052941', 'Broučci: Get author NKČR AUT id.');
+$author_ext_ids_ar = $author->external_ids;
+is(@{$author_ext_ids_ar}, 1, 'Broučci: Get author external ids count (1).');
+is($author_ext_ids_ar->[0]->name, 'nkcr_aut', 'Broučci: Get author external value name (nkcr_aut).');
+is($author_ext_ids_ar->[0]->value, 'jk01052941', 'Broučci: Get author NKCR id (jk01052941).');
 is($ret->edition_number, 2, 'Broučci: Get edition number.');
 is_deeply($ret->editors, [], 'Broučci: Get editors.');
 $external_ids_ar = $ret->external_ids;
@@ -152,7 +164,10 @@ is($author->date_of_birth, undef, 'Učebnice práva ve čtyřech knihách: Get a
 is($author->date_of_death, undef, 'Učebnice práva ve čtyřech knihách: Get author date of death.');
 is($author->work_period_start, 110, 'Učebnice práva ve čtyřech knihách: Get author work period start.');
 is($author->work_period_end, 180, 'Učebnice práva ve čtyřech knihách: Get author work period end.');
-is($author->nkcr_aut, 'jn19990002527', 'Učebnice práva ve čtyřech knihách: Get author NKČR AUT id.');
+$author_ext_ids_ar = $author->external_ids;
+is(@{$author_ext_ids_ar}, 1, 'Učebnice práva ve čtyřech knihách: Get author external ids count (1).');
+is($author_ext_ids_ar->[0]->name, 'nkcr_aut', 'Učebnice práva ve čtyřech knihách: Get author external value name (nkcr_aut).');
+is($author_ext_ids_ar->[0]->value, 'jn19990002527', 'Učebnice práva ve čtyřech knihách: Get author NKCR id (jn19990002527).');
 
 # Test.
 $marc_data = slurp($data->file('cnb001042253.mrc')->s);
